# timber-rust

./: Cargo.toml  LICENSE  README.md  deny.toml  docker-compose.yml
.cargo/: config.toml
.github/workflows/: rust.yml  static.yml
docs/: credits.html
src/: config.rs  def.rs  factory.rs  lib.rs  logger.rs  manager.rs  message.rs  service.rs
src/config/: config.rs  duration.rs  entry.rs  entry_crud.rs  timestamp.rs
src/factory/: aws.rs  awscout.rs  factory.rs  fmt.rs  io.rs  loki.rs  std.rs  vec.rs  write.rs
src/logger/: base.rs  cloudwatch.rs  direct.rs  level.rs  loggable.rs  loki.rs  queued.rs  silent.rs  status.rs
src/service/: aws.rs  error.rs  fallback.rs  formatter.rs  fv1hash.rs  loki.rs  loki_config.rs  mod.rs  serde.rs  serror.rs  service.rs  vector.rs  write.rs
src/service/aws/: config.rs  cout.rs  data.rs  message.rs  msgformatter.rs  service.rs
src/service/loki/: config.rs  data.rs  message.rs  service.rs
src/service/write/: arcedfmt.rs  boxedfmt.rs  fmt.rs  io.rs  msgformatter.rs  std.rs  vector.rs
tests/: logger_impl_integration.rs  loki_integration.rs
