[package]
name = "timber_rust"
version = "2.0.0"
edition = "2024"
license = "Apache-2.0"
authors = ["Dante Doménech Martinez <dante19031999@gmail.com>"]
description = "A high-performance, asynchronous logging library with support for Grafana Loki and AWS CloudWatch."
documentation = "https://docs.rs/timber-rust"
homepage = "https://dante19031999.github.io/timber-rust/timber_rust/index.html" # Cambia tu-usuario
repository = "https://github.com/dante19031999/timber-rust"
readme = "README.md"
keywords = ["logging", "loki", "cloudwatch", "aws", "async"]
categories = ["development-tools::debugging", "network-programming"]

[features]
serde_tools = []
network = ["dep:reqwest"]
json = ["dep:serde_json"]
tokio = ["dep:tokio"]
loki = ["network", "json"]
aws = ["dep:aws-config", "dep:aws-sdk-cloudwatchlogs",  "tokio", "awscout"]
awscout = ["json"]
default = ["json"]

[dependencies]
reqwest = { version = ">=0.13.0", optional = true, features = ["blocking"] }
crossbeam = { version = ">=0.8.0", features = ["crossbeam-channel"] }
chrono = { version = ">=0.4.20" }
serde_json = { version = ">=1.0.140", optional = true }
serde = { version = ">=1.0.200", features = ["derive"] }
aws-sdk-cloudwatchlogs = { version = ">=1.120.0", optional = true }
tokio = { version = ">=1.50.0", optional = true, features = ["rt-multi-thread"] }
aws-config = { version = ">=1.8.15", optional = true }
log = "0.4.29"

[dev-dependencies]
regex = "1.11.1"

[package.metadata.docs.rs]
# Esto habilita el marcado de features en docs.rs
all-features = true
rustdoc-args = ["--cfg", "docsrs"]